--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/syntactical/gregslist.git"
   },
-  "author": "Greg Dutcher & Ricky Wayne Rodriguez",
+  "author": "Greg Dutcher & Nick Young",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/syntactical/gregslist/issues"
